Fix dedicated server networking and chain state